tp/Bastien_Capiaux_21002589_tp4/_build/_log
### Starting build.
# Target: test.ml.depends, tags: { extension:ml, file:test.ml, ocaml, ocamldep, quiet }
/usr/bin/ocamldep.opt -modules test.ml > test.ml.depends # cached
# Target: ast.ml.depends, tags: { extension:ml, file:ast.ml, ocaml, ocamldep, quiet }
/usr/bin/ocamldep.opt -modules ast.ml > ast.ml.depends # cached
# Target: interp.ml.depends, tags: { extension:ml, file:interp.ml, ocaml, ocamldep, quiet }
/usr/bin/ocamldep.opt -modules interp.ml > interp.ml.depends
+ /usr/bin/ocamldep.opt -modules interp.ml > interp.ml.depends
File "interp.ml", line 24, characters 2-3:
24 |   | Return e 	      -> Stop (eval_expr env e)
       ^
Error: Syntax error
Command exited with code 2.
# Compilation unsuccessful.
